-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Beta
-
-
f104e43a72380f66f8c517b90326a9209612106d in 5.8
On iOS and Android the whole Qml screen is moved upwards so that text input fields are visible when the system keyboard pops up. On Windows Phone this does not happen and text fields are eventually covered.
For Gerrit Dashboard: QTBUG-50291 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
169881,3 | winrt: Make sure that cursor is visible when virtual keyboard is shown | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |